force-app/main/default/objects/PD_Document__c/PD_Document__c.object-meta.xml
<CustomObject>
    <label>PD Document</label>
    <nameField>
        <label>PD Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PD Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>