force-app/main/default/objects/PD_Document__c/fields/PD_ID__c.field-meta.xml
<CustomField>
    <fullName>PD_ID__c</fullName>
    <label>PD ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>