force-app/main/default/objects/PD_Document__c/fields/PD_URL__c.field-meta.xml
<CustomField>
    <fullName>PD_URL__c</fullName>
    <label>PD URL</label>
    <type>Url</type>
</CustomField>